--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,8 @@
         android:inputType="numberDecimal"
         android:ems="10"
         android:id="@+id/us_text"
+        android:hint="$ 00.00"
+        android:textSize="24sp"
         android:layout_alignBottom="@+id/us"
         android:layout_alignRight="@+id/in_text"
         android:layout_alignEnd="@+id/in_text"
@@ -78,7 +80,9 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
+        android:textSize="24sp"
         android:id="@+id/gb_text"
+        android:hint="£ 00.00"
         android:layout_alignBottom="@+id/gb"
         android:layout_alignRight="@+id/in_text"
         android:layout_alignEnd="@+id/in_text"
@@ -100,7 +104,9 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
+        android:textSize="24sp"
         android:id="@+id/ca_text"
+        android:hint="$ 00.00"
         android:layout_alignBottom="@+id/ca"
         android:layout_alignRight="@+id/in_text"
         android:layout_alignEnd="@+id/in_text"
@@ -122,7 +128,9 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
+        android:textSize="24sp"
         android:id="@+id/jp_text"
+        android:hint="¥ 00.00"
         android:layout_alignBottom="@+id/jp"
         android:layout_alignRight="@+id/in_text"
         android:layout_alignEnd="@+id/in_text"
@@ -144,7 +152,9 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:ems="10"
+        android:textSize="24sp"
         android:id="@+id/ge_text"
+        android:hint="€ 00.00"
         android:layout_alignBottom="@+id/ge"
         android:layout_alignRight="@+id/in_text"
         android:layout_alignEnd="@+id/in_text"
